HTML/CSS/JavaScript 入門編

--- a/src/station7.html
+++ b/src/station7.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="./assets/image/railway-thumbnail.png"/>
+    <meta property="og:title" content="station6" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="C:\Users\saori25\html-stations-1\src\station6.html" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@wani" />
     <link rel="stylesheet" href="./assets/css/station7.css" type="text/css" />
     <title>Station 7</title>
   </head>
