--- a/src/station1.html
+++ b/src/station1.html
@@ -7,5 +7,12 @@
 <title>Station 1</title>
 </head>
 <body>
+    <div>
+        <img src="./assets/image/railway-thumbnail.png">
+        <p><b>TechTrain</b>の使い方<br>
+        <b>TechBowl</b></p>
+        <p>Suguri Ohki<br>
+        6,722回視聴・2021/04/22</p>
+    </div>
 </body>
 </html>
